[project]
name = "yuno-orchestrator"
version = "0.1.0"
description = "AI Agent Orchestration Platform — control plane + worker runtime"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "langgraph>=0.2.60",
    "anthropic>=0.42",
    "openai>=1.59",
    "google-genai>=0.3",
    "redis>=5.2",
    "apscheduler>=3.11",
    "croniter>=3.0",
    "lark>=1.2",
    "structlog>=24.4",
    "httpx>=0.28",
    "tavily-python>=0.5",
    "python-telegram-bot>=21.9",
    "pyyaml>=6.0",
    # Lean runtime deps for extremis (installed --no-deps in the Dockerfile so
    # torch/sentence-transformers stay out): postgres+pgvector store, numpy maths.
    "numpy>=1.26",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
